--- a/software/stacks/sample/app/web/ingress.yaml
+++ b/software/stacks/sample/app/web/ingress.yaml
@@ -9,6 +9,10 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   ingressClassName: nginx
+  tls:
+  - hosts:
+    - localhost
+    secretName: sample-website-tls-secret
   rules:
   - host: localhost
     http:
