bug: https redirect

--- a/software/stacks/sample/ingress-nginx/release.yaml
+++ b/software/stacks/sample/ingress-nginx/release.yaml
@@ -46,3 +46,4 @@ spec:
         publish-status-address: localhost
       config:
         use-forwarded-headers: "true"
+        ssl-redirect-port: "8443"
