--- a/software/stacks/sample/stack.yaml
+++ b/software/stacks/sample/stack.yaml
@@ -35,7 +35,7 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
-  path: ./software/components/certs/component.yaml
+  path: ./software/components/certs
   prune: true
   wait: true
 ---
