--- a/software/stacks/sample/app/web/ingress.yaml
+++ b/software/stacks/sample/app/web/ingress.yaml
@@ -7,6 +7,7 @@ metadata:
     hostk8s.application: website
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
 spec:
   ingressClassName: nginx
   tls:
