--- a/software/components/certs/kustomization.yaml
+++ b/software/components/certs/kustomization.yaml
@@ -2,4 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - stack.yaml
+  - component.yaml
+
+commonLabels:
+  hostk8s.component: certs
