--- a/software/components/redis-infrastructure/redis-config.yaml
+++ b/software/components/redis-infrastructure/redis-config.yaml
@@ -13,9 +13,12 @@ data:
     port 6379
 
     # Persistence configuration
-    save 900 1      # Save snapshot if at least 1 key changed in 900 seconds
-    save 300 10     # Save snapshot if at least 10 keys changed in 300 seconds
-    save 60 10000   # Save snapshot if at least 10000 keys changed in 60 seconds
+    # Save snapshot if at least 1 key changed in 900 seconds
+    save 900 1
+    # Save snapshot if at least 10 keys changed in 300 seconds
+    save 300 10
+    # Save snapshot if at least 10000 keys changed in 60 seconds
+    save 60 10000
 
     # Memory management
     maxmemory 256mb
