Fix voting app registry DNS resolution issue
Use direct IP address (10.111.130.183:5000) instead of DNS name to
bypass DNS resolution issues preventing image pulls.

Changes:
- vote-deployment.yaml: Use registry IP
- result-deployment.yaml: Use registry IP
- worker-deployment.yaml: Use registry IP

--- a/software/stacks/voting-app/app/result-deployment.yaml
+++ b/software/stacks/voting-app/app/result-deployment.yaml
@@ -21,7 +21,7 @@ spec:
     spec:
       containers:
       - name: result
-        image: registry.registry.svc.cluster.local:5000/hostk8s-result:latest
+        image: 10.111.130.183:5000/hostk8s-result:latest
         ports:
         - containerPort: 80
           name: http
