--- a/software/stacks/voting-app/app/vote-deployment.yaml
+++ b/software/stacks/voting-app/app/vote-deployment.yaml
@@ -21,7 +21,7 @@ spec:
     spec:
       containers:
       - name: vote
-        image: 10.111.130.183:5000/hostk8s-vote:latest
+        image: dockersamples/examplevotingapp_vote:latest
         ports:
         - containerPort: 80
           name: http
@@ -41,15 +41,3 @@ spec:
           limits:
             memory: "128Mi"
             cpu: "100m"
-        livenessProbe:
-          httpGet:
-            path: /health
-            port: 80
-          initialDelaySeconds: 30
-          periodSeconds: 10
-        readinessProbe:
-          httpGet:
-            path: /health
-            port: 80
-          initialDelaySeconds: 5
-          periodSeconds: 5
