--- a/software/stacks/voting-app/app/kustomization.yaml
+++ b/software/stacks/voting-app/app/kustomization.yaml
@@ -15,6 +15,7 @@ resources:
   - worker-deployment.yaml
   - db-deployment.yaml
   - db-service.yaml
+  - voting-ingress.yaml
 
 commonLabels:
   hostk8s.app: voting-app
