--- a/software/stacks/voting-app/app/result-service.yaml
+++ b/software/stacks/voting-app/app/result-service.yaml
@@ -13,7 +13,6 @@ spec:
   ports:
   - port: 80
     targetPort: 80
-    nodePort: 30082
     protocol: TCP
     name: http
-  type: NodePort
+  type: ClusterIP
