--- a/software/stacks/voting-app/app/result-deployment.yaml
+++ b/software/stacks/voting-app/app/result-deployment.yaml
@@ -21,7 +21,7 @@ spec:
     spec:
       containers:
       - name: result
-        image: dockersamples/examplevotingapp_result:latest
+        image: localhost:5000/hostk8s-result:latest
         ports:
         - containerPort: 80
           name: http
