feat: add registry

--- a/.env.example
+++ b/.env.example
@@ -29,6 +29,7 @@
 # FLUX_ENABLED=true                      # GitOps with Flux
 # METALLB_ENABLED=true                   # Manual LoadBalancer support
 # INGRESS_ENABLED=true                   # Manual NGINX Ingress Controller
+# REGISTRY_ENABLED=true                  # Local container registry
 
 # =============================================================================
 # GITOPS CONFIGURATION (when FLUX_ENABLED=true)
