--- a/infra/manifests/registry-ui.yaml
+++ b/infra/manifests/registry-ui.yaml
@@ -4,7 +4,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: registry-ui
-  namespace: registry
+  namespace: hostk8s
   labels:
     app: registry-ui
     hostk8s.addon: registry
@@ -34,8 +34,8 @@ spec:
           value: "true"
         - name: SHOW_CONTENT_DIGEST
           value: "true"
-        - name: NGINX_PROXY_PASS_URL
-          value: "http://registry-core.registry.svc.cluster.local:5000"
+        - name: REGISTRY_URL
+          value: "http://localhost:8080"
         - name: SHOW_CATALOG_NB_TAGS
           value: "true"
         - name: CATALOG_MIN_BRANCHES
@@ -48,6 +48,8 @@ spec:
           value: "false"
         - name: CATALOG_ELEMENTS_LIMIT
           value: "1000"
+        - name: BASE_PATH
+          value: "/"
         resources:
           requests:
             memory: "64Mi"
@@ -69,12 +71,45 @@ spec:
           periodSeconds: 10
 
 ---
+# Registry API Service (points to Docker container)
+apiVersion: v1
+kind: Service
+metadata:
+  name: registry-api
+  namespace: hostk8s
+  labels:
+    app: registry-api
+    hostk8s.addon: registry
+spec:
+  type: ClusterIP
+  ports:
+  - name: http
+    port: 5000
+    targetPort: 5002
+---
+# Registry API Endpoint
+apiVersion: v1
+kind: Endpoints
+metadata:
+  name: registry-api
+  namespace: hostk8s
+  labels:
+    app: registry-api
+    hostk8s.addon: registry
+subsets:
+- addresses:
+  - ip: 192.168.65.254  # host.docker.internal IP
+  ports:
+  - port: 5002
+    name: http
+
+---
 # Registry UI Service (ClusterIP for ingress)
 apiVersion: v1
 kind: Service
 metadata:
   name: registry-ui
-  namespace: registry
+  namespace: hostk8s
   labels:
     app: registry-ui
     hostk8s.addon: registry
@@ -88,28 +123,58 @@ spec:
     app: registry-ui
 
 ---
-# Registry UI Ingress (requires NGINX Ingress Controller)
+# Registry API Ingress (for Docker Registry API endpoints)
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: registry-ui
-  namespace: registry
+  name: registry-api-ingress
+  namespace: hostk8s
   labels:
-    app: registry-ui
+    app: registry-api
     hostk8s.addon: registry
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
     nginx.ingress.kubernetes.io/proxy-body-size: "0"
     nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
     nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
 spec:
   ingressClassName: nginx
   rules:
-  - host: registry.localhost
-    http:
+  - http:
       paths:
-      - path: /
+      - path: /v2
         pathType: Prefix
+        backend:
+          service:
+            name: registry-api
+            port:
+              number: 5000
+
+---
+# Registry UI Ingress (for Joxit Registry UI)
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: registry-ui
+  namespace: hostk8s
+  labels:
+    app: registry-ui
+    hostk8s.addon: registry
+  annotations:
+    nginx.ingress.kubernetes.io/proxy-body-size: "0"
+    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
+    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/server-snippet: |
+      location = /registry {
+        return 301 $scheme://$http_host/registry/;
+      }
+spec:
+  ingressClassName: nginx
+  rules:
+  - http:
+      paths:
+      - path: /registry(/|$)(.*)
+        pathType: ImplementationSpecific
         backend:
           service:
             name: registry-ui
