--- a/src/sample-app/docker-compose.yml
+++ b/src/sample-app/docker-compose.yml
@@ -1,57 +1,59 @@
-# HostK8s Sample App - Build Configuration
-# Used by: make build sample-vote, make build sample-result
-# Purpose: Build and push images to HostK8s registry
-
-version: '3.8'
+# Local Development Environment
+# Use: docker-compose up
+# Purpose: Develop and test sample-app without HostK8s
 
 services:
-  hostk8s-vote:
+  vote:
     build:
       context: ./vote
-      target: prod
-      labels:
-        - "hostk8s.app=hostk8s-vote"
-        - "hostk8s.component=voting-system"
-    image: localhost:5000/hostk8s-vote:latest
+      target: dev
+    ports:
+      - "5000:80"
+    volumes:
+      - ./vote:/usr/local/app
     environment:
-      - REDIS_HOST=redis-infrastructure.redis-infrastructure.svc.cluster.local
-      - OPTION_A=Kubernetes
-      - OPTION_B=Docker Swarm
-    labels:
-      - "hostk8s.app=hostk8s-vote"
-      - "hostk8s.tutorial=level-100-400"
+      - FLASK_ENV=development
+      - REDIS_HOST=redis
+    depends_on:
+      - redis
 
-  hostk8s-result:
-    build:
-      context: ./result
-      target: prod
-      labels:
-        - "hostk8s.app=hostk8s-result"
-        - "hostk8s.component=voting-system"
-    image: localhost:5000/hostk8s-result:latest
+  result:
+    build: ./result
+    ports:
+      - "5001:80"
+    volumes:
+      - ./result:/usr/local/app
+      - /usr/local/app/node_modules  # Protect node_modules
     environment:
-      - DATABASE_URL=postgres://postgres:postgres@postgres-infrastructure.postgres-infrastructure.svc.cluster.local:5432/votes
-    labels:
-      - "hostk8s.app=hostk8s-result"
-      - "hostk8s.tutorial=level-100-400"
+      - NODE_ENV=development
+      - DATABASE_URL=postgres://postgres:password@db:5432/votes
+    depends_on:
+      - db
 
-  hostk8s-worker:
-    build:
-      context: ./worker
-      target: prod
-      labels:
-        - "hostk8s.app=hostk8s-worker"
-        - "hostk8s.component=voting-system"
-    image: localhost:5000/hostk8s-worker:latest
+  worker:
+    build: ./worker
     environment:
-      - REDIS_HOST=redis-infrastructure.redis-infrastructure.svc.cluster.local
-      - POSTGRES_HOST=postgres-infrastructure.postgres-infrastructure.svc.cluster.local
+      - REDIS_HOST=redis
+      - DATABASE_URL=postgres://postgres:password@db:5432/votes
+    depends_on:
+      - redis
+      - db
+
+  redis:
+    image: redis:alpine
+    ports:
+      - "6379:6379"
+
+  db:
+    image: postgres:15
+    environment:
       - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_PASSWORD=password
       - POSTGRES_DB=votes
-    labels:
-      - "hostk8s.app=hostk8s-worker"
-      - "hostk8s.tutorial=level-100-400"
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
 
-# Note: No volumes or ports needed - this is for building images only
-# Runtime configuration handled by Kubernetes manifests
+volumes:
+  postgres_data:
