--- a/src/sample-app/result/package.json
+++ b/src/sample-app/result/package.json
@@ -1,29 +1,20 @@
 {
-  "name": "voting-result",
+  "name": "result",
   "version": "1.0.0",
-  "description": "HostK8s Voting App - Result Service",
+  "description": "",
   "main": "server.js",
-  "type": "module",
   "scripts": {
-    "dev": "bun --watch server.js",
-    "start": "bun server.js",
-    "test": "bun test",
-    "lint": "bun run eslint .",
-    "format": "bun run prettier --write ."
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "author": "",
+  "license": "MIT",
   "dependencies": {
+    "async": "^3.1.0",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
+    "method-override": "^3.0.0",
+    "pg": "^8.8.0",
     "socket.io": "^4.7.2",
-    "pg": "^8.11.0",
-    "cookie-parser": "^1.4.6"
-  },
-  "devDependencies": {
-    "@types/bun": "latest",
-    "@types/express": "^4.17.21",
-    "@types/pg": "^8.10.7",
-    "eslint": "^8.57.0",
-    "prettier": "^3.1.0"
-  },
-  "author": "HostK8s",
-  "license": "MIT"
+    "stoppable": "^1.1.0"
+  }
 }
