fix(voting-app): correct registry URLs to resolve ImagePullBackOff errors
Update all voting app deployment manifests to use correct registry address:
- Change from localhost:5000 to 127.0.0.1:5002
- Affects vote, result, and worker deployments
- Resolves pod startup failures due to incorrect image pull addresses

--- a/software/stacks/voting-app/app/result-deployment.yaml
+++ b/software/stacks/voting-app/app/result-deployment.yaml
@@ -21,7 +21,7 @@ spec:
     spec:
       containers:
       - name: result
-        image: localhost:5000/hostk8s-result:latest
+        image: 127.0.0.1:5002/hostk8s-result:latest
         ports:
         - containerPort: 80
           name: http
