--- a/software/stacks/voting-app/app/vote-deployment.yaml
+++ b/software/stacks/voting-app/app/vote-deployment.yaml
@@ -21,7 +21,7 @@ spec:
     spec:
       containers:
       - name: vote
-        image: localhost:5000/hostk8s-vote:latest
+        image: 127.0.0.1:5002/hostk8s-vote:latest
         ports:
         - containerPort: 80
           name: http
