--- a/software/stacks/voting-app/app/worker-deployment.yaml
+++ b/software/stacks/voting-app/app/worker-deployment.yaml
@@ -21,7 +21,7 @@ spec:
     spec:
       containers:
       - name: worker
-        image: 127.0.0.1:5002/hostk8s-worker:latest
+        image: registry-api.hostk8s.svc.cluster.local:5000/hostk8s-worker:latest
         env:
         - name: REDIS_HOST
           value: "redis.redis-infrastructure.svc.cluster.local"
